--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="about" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <img src="images/your-photo.jpg" alt="Nancy Carter Professional Photo" class="profile-photo">
+                    <img src="assets/images/nc.jpg" alt="Nancy Carter Professional Photo" class="profile-photo">
                     <div class="text-content">
                         <h2>Hello, I'm Nancy Carter</h2>
                         <p class="tagline">Digital Project Manager | Customer Success Professional | Creative Ally</p>
