--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nancy Carter - Portfolio</title>
+    <title>Nancy Carter</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
     <header>
         <nav>
             <div class="container">
                 <h1><a href="#about">Nancy Carter</a></h1>
                 <ul>
                     <li><a href="#about">About Me</a></li>
-                    <li><a href="#courses">Education</a></li>
+                    <li><a href="#courses">Background</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#cv">CV</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -29,23 +28,22 @@
         <section id="about" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <img src="assets/images/nc.jpg" max-width="300" alt="Nancy Carter Professional Photo" class="profile-photo">
+                    <img src="assets/images/nc.jpg" max-width="450" alt="Nancy Carter Professional Photo" class="profile-photo">
                     <div class="text-content">
                         <h2>Hello, I'm Nancy Carter</h2>
-                        <p class="tagline">Digital Project Manager | Customer Success Professional | Creative Ally</p>
-                        <p>I am a practical all-rounder with proven skills in account, service, and relationship management. My extensive experience in digital project management, combined with a creative and friendly approach, drives me to create engaging and innovative solutions. I am commercially and technically astute, with a broad understanding of both the Business and the Charity/Non-Profit sectors. I am eager to contribute my creativity and technical abilities to a dynamic team, currently seeking opportunities that blend project management with customer success and creative problem-solving.</p>
+                        <p class="tagline">Account, Service and Digital Project Manager</p>
+                        <p>A friendly and pragmatic all-rounder, looking for a great team of creative people doing work for the good</p>
                         <div class="social-links">
-                            <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://github.com/yourgithubprofile" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/nancyrcarter" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://cnarter.github.io/Portfolio/" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
         <section id="courses" class="section-padded">
             <div class="container">
-                <h2>My Education & Certifications</h2>
+                <h2>My Background and experience</h2>
                 <div class="courses-grid">
                     <div class="course-item">
                         <h3>Project Management - Digital Transformation</h3>
@@ -80,31 +78,21 @@
                     <div class="course-item">
                         <h3>Financial Planning Certificate</h3>
                         <p class="institution">Financial Services Authority</p>
-                        <p class="date">Previously a fully qualified Financial Advisor</p>
-                        <p>Comprehensive training in financial planning and advisory services.</p>
+                        I was fully qualified to give whole of market Financial Advice including on Pension, Investments, Mortgages and Insurances.</p>
                     </div>
                     <div class="course-item">
                         <h3>B-Tec National Diploma in Fine Art and Design</h3>
-                        <p class="institution">Level 3 qualification</p>
-                        <p class="date">Dates not specified</p>
-                        <p>Developed foundational skills in fine art and design principles, fostering creativity and visual communication abilities.</p>
-                    </div>
-                    <div class="course-item">
-                        <h3>GCSEs</h3>
-                        <p class="institution">8 GCSEs at grade C and above, including Maths and English</p>
-                        <p class="date">Dates not specified</p>
-                        <p>Demonstrated strong foundational academic skills across various subjects.</p>
-                    </div>
+                        <p class="institution">Suffolk College of Fine Art & Design</p>
+                           </div>
                 </div>
             </div>
         </section>
-
         <section id="projects" class="section-padded bg-light">
             <div class="container">
-                <h2>My Projects</h2>
+                <h2>Obsessions and Projects</h2>
 
                 <div class="project-item">
-                    <h3>Worthing Street Game</h3>
+                    <h3>Worthing Street Game - a plan!</h3>
                     <div class="project-details">
                         <div class="project-images">
                             <img src="images/worthing-pier-screenshot1.jpg" alt="Worthing Pier, view from the sea ">
@@ -113,32 +101,31 @@
                              <img src="images/worthing-game-clue-bus.jpg" alt="Worthing Street Game Clue - Bus Panel ">
                         </div>
                         <div class="project-description">
-                            <p class="project-overview">The Worthing Street Game is a fun, interactive street game, playable on any mobile device, showcasing interesting historical and architectural places in Worthing. The objective is to create an enjoyable game playable over a small, accessible, mapped area in central Worthing. It includes 10-15 interesting facts, views, architectural, or historical places that are always visible and not dependent on seasons, weather, or regular changes/closures. The 'journey' is on foot, ensuring accessibility for most people. Future monetization via sponsorship or pay-per-play is being considered in the build and design, though making money is currently excluded from the project's scope.</p>
-                            <p class="project-overview">Expected delivery for the game is Summer 2026.</p>
-
-                            <h4>Key Features:</h4>
+                            <p class="project-overview">As part of a recent Project Mangement Bootcamp, I was asked to design a project, and I came up with creating a Worthing Street Game. The idea is a fun, interactive street game, playable on any mobile device, 
+                                showcasing interesting historical and architectural places in Worthing. The project would create an enjoyable, interactive, multiplayer game playable over a small, accessible, mapped area in central Worthing. 
+                                It would include 10-15 interesting clus to slve, covering facts, views, architectural, or historical places that are always visible and not dependent on seasons, weather, or regular changes/closures. 
+                                The 'journey' would be on foot, and I took care in planning to ensure it's accessibile for most people. I thought about possible monetization via sponsorship or pay-per-play, and considered that in the project and build design</p>
+                           <h4>Key Features:</h4>
                             <ul>
-                                <li>Interactive map with a flat, accessible route, including the museum, pier, and cinema, with no steps and many crossings.</li>
+                                <li>Interactive map with a flat, accessible route, including the museum, pier, and cinema, with no steps and with safer road crossing spaces.</li>
                                 <li>Location-based puzzles and clues designed around permanent landmarks in Worthing.</li>
-                                <li>Examples of clues include: "With many seats, but no legs to walk. Over the sea but will never sail away."  (Worthing Pier ).</li>
-                                <li>Another clue involves inspecting "pretty panels on the pier" for an iconic London Transport bus to find a number.</li>
                                 <li>Future potential for 'side quest' add-ons and monetization via sponsorship or pay-per-play.</li>
-                                <li>Designed to be inclusive and accessible, including features for disabled access and 'changing places' toilets, and can be played on foot.</li>
+                                <li>Designed to be inclusive and accessible, including features for disabled access and 'changing places' toilets.</li>
                             </ul>
-                            <h4>My Contributions:</h4>
-                            <p>This project is being run solely by me, giving me full control, flexible deadlines, and agility in responding to changes. My contributions span all aspects of the project lifecycle:</p>
+                            <h4>Skills demonstrated</h4>
+                            <p>This project covered all aspects of the project lifecycle:</p>
                             <ul>
-                                <li>**Project Management:** Managed the entire project independently, logging all hours worked against planned future income using a time-tracker in Monday (my PM tool). Created a dummy budget plan to demonstrate a structured approach.</li>
-                                <li>**Content Creation:** Defined the route, photographed "answers" to clues, and wrote clues and solutions.</li>
-                                <li>**Mapping & Accessibility:** Created a mapped area considering accessibility, ensuring a flat and inclusive route.</li>
-                                <li>**Stakeholder Management:** Identified and engaged with key stakeholders including Adur & Worthing Council, Creative Waves, Town Center Bid Association, local businesses like time4Tech, and the Selden Residents Association.</li>
-                                <li>**Risk Management:** Conducted a comprehensive risk analysis, identifying potential issues such as changes to the ActionBound application, poor connectivity, and user interest, with mitigation plans in place.</li>
-                                <li>**Strategic Planning:** Conducted a SWOT analysis, highlighting strengths like individual project control and existing knowledge of Worthing, and identifying opportunities for future AI integration and monetization.</li>
-                                <li>**Monitoring & Evaluation:** Planned to build a shareable webpage, create social media channels, set up monitoring via GA and HotJar, and collect feedback via Typeform to measure success against gameplay and sponsorship goals.</li>
+                                <li>Project Management: Managed the entire project independently, logging all hours worked against planned future income using a time-tracker in Monday (my PM tool). Created a dummy budget plan to demonstrate a structured approach.</li>
+                                <li>Content Creation: Defined the route, photographed "answers" to clues, and wrote clues and solutions.</li>
+                                <li>Mapping & Accessibility:Created a mapped area considering accessibility, ensuring a flat and inclusive route.</li>
+                                <li>Stakeholder Management:Identified and engaged with key stakeholders including Adur & Worthing Council, Creative Waves, Town Center Bid Association, local businesses like time4Tech, and the Selden Residents Association.</li>
+                                <li>Risk Management:Conducted a comprehensive risk analysis, identifying potential issues such as changes to the ActionBound application, poor connectivity, and user interest, with mitigation plans in place.</li>
+                                <li>Strategic Planning:Conducted a SWOT analysis, highlighting strengths like individual project control and existing knowledge of Worthing, and identifying opportunities for future AI integration and monetization.</li>
+                                <li>Monitoring & Evaluation:Planned to build a shareable webpage, create social media channels, set up monitoring via GA and HotJar, and collect feedback via Typeform to measure success against gameplay and sponsorship goals.</li>
                             </ul>
                             <h4>Technologies & Tools Used:</h4>
                             <p class="technologies">ActionBound (anticipated platform), Monday (PM tool), Google Analytics, HotJar, Typeform</p>
-                            <a href="#" target="_blank" class="btn">View Project Details (Placeholder)</a>
+                            
                         </div>
                     </div>
                 </div>
@@ -149,7 +136,7 @@
         <section id="cv" class="section-padded">
             <div class="container text-center">
                 <h2>Download My CV</h2>
-                <p>For a detailed overview of my skills, experience, and education, please download my curriculum vitae. I am a practical all-rounder with proven skills in account, service and relationship management, alongside extensive experience in digital project management, and a creative and friendly approach. </p>
+                <p>For a more detailed overview of my skills, experience, and background, please download my curriculum vitae. </p>
                 <a href="NancyCarter_CV.pdf" download class="btn btn-primary">
                     <i class="fas fa-download"></i> Download CV
                 </a>
@@ -173,12 +160,10 @@
             </div>
         </section>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2025 Nancy Carter. All rights reserved.</p>
         </div>
     </footer>
-
 </body>
 </html>
