--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="about" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <img src="assets/images/nc.jpg" max-width="450" alt="Nancy Carter Professional Photo" class="profile-photo">
+                    <img src="assets/images/Nc500wide.jpg" max-width="450" alt="Nancy Carter Professional Photo" class="profile-photo">
                     <div class="text-content">
                         <h2>Hello, I'm Nancy Carter</h2>
                         <p class="tagline">Account, Service and Digital Project Manager</p>
