Update image alt text

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <section id="about" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <img src="assets/images/Nc500wide.jpg" max-width="450" alt="Nancy Carter Professional Photo" class="profile-photo">
+                    <img src="assets/images/Nc500wide.jpg" max-width="450" alt="Photograph of Nancy, with a half smile" class="profile-photo">
                     <div class="text-content">
-                        <h2>Hello, I'm Nancy Carter</h2>
+                        <h2>Hello, I'm Nancy</h2>
                         <p class="tagline">Account, Service and Digital Project Manager</p>
                         <p>A friendly and pragmatic all-rounder, looking for a great team of creative people doing work for the good</p>
                         <div class="social-links">
