--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
                     <h3>Worthing Street Game - a plan!</h3>
                     <div class="project-details">
                         <div class="project-images">
-                            <img src="images/worthing-pier-screenshot1.jpg" alt="Worthing Pier, view from the sea ">
-                            <img src="images/worthing-pier-screenshot2.jpg" alt="Worthing Pier, view from entrance ">
-                             <img src="images/worthing-game-mockup.jpg" alt="Worthing Street Game Mobile Mockup">
-                             <img src="images/worthing-game-clue-bus.jpg" alt="Worthing Street Game Clue - Bus Panel ">
+                            
+                            <img src="assets/images/pier amusements.jpg" alt="Worthing Pier, view from entrance ">
+                             
                         </div>
                         <div class="project-description">
                             <p class="project-overview">As part of a recent Project Mangement Bootcamp, I was asked to design a project, and I came up with creating a Worthing Street Game. The idea is a fun, interactive street game, playable on any mobile device, 
@@ -147,7 +146,7 @@
         <section id="contact" class="section-padded bg-dark">
             <div class="container text-center">
                 <h2>Get in Touch</h2>
-                <p>I'm always open to discussing new opportunities, collaborations, or simply connecting. Feel free to reach out!</p>
+                <p>I love to chat through ideas and potential opportunities- so if you think we might get on, please contact me!</p>
                 <div class="contact-info">
                     <p><i class="fas fa-envelope"></i> Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
                     <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank">linkedin.com/in/yourlinkedinprofile</a></p>
