--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                     <div class="text-content">
                         <h2>Hello, I'm Nancy</h2>
                         <p class="tagline">Account, Service and Digital Project Manager</p>
-                        <p>A friendly and pragmatic all-rounder, looking for a great team of creative people doing work for the good</p>
+                        <p>I'm a friendly and pragmatic all-rounder, looking for a great team of creative people doing interesting work, for good. I have lots 
+                            of Account and Service management experience, including running the Support service in a 'tech for good', digital agency for four years, and a year in a SaaS start-up, 
+                           focused on improving fairness in hiring. </p>
+                        <p>I'm returning from a career break, and would love to find a team in Brighton where I can use my skills and add value.</p>
                         <div class="social-links">
                             <a href="https://www.linkedin.com/in/nancyrcarter" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
                             <a href="https://cnarter.github.io/Portfolio/" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
