text not showing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <h2>Hello, I'm Nancy</h2>
                         <p class="tagline">Account, Service and Digital Project Manager</p>
                         <p>I'm a friendly and pragmatic all-rounder, looking for a great team of creative people doing interesting work, for good.</p>
-                        <p></p>With decades of Account and Service management experience, including running the Support service in a 'tech for good', digital agency for four years, and a year in a SaaS
+                        <p>With decades of Account and Service management experience, including running the Support service in a 'tech for good', digital agency for four years, and a year in a SaaS
                         start-up, focused on improving fairness in hiring, I am commercially and technically astute, a creative problem solver and enjoy a role where I can get involved on various levels, and learn new skills.</p>
                         <p>I'm returning from a (health drama - now fully resolved) career break. During my break, I completed a Digital Project Management Bootcamp (accredited by the APM) to polish my 'on-the-job' skills,
                             and am currently attending a Software Development course at Brighton MET, partly for interest and to better understand testing, simple fixes, and of course, developer teams. I'm also learning BSL</p>p>
