--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                         <p>With decades of Account and Service management experience, including running the Support service in a 'tech for good', digital agency for four years, and a year in a SaaS
                         start-up, focused on improving fairness in hiring, I am commercially and technically astute, a creative problem solver and enjoy a role where I can get involved on various levels, and learn new skills.</p>
                         <p>I'm returning from a (health drama - now fully resolved) career break. During my break, I completed a Digital Project Management Bootcamp (accredited by the APM) to polish my 'on-the-job' skills,
-                            and am currently attending a Software Development course at Brighton MET, partly for interest and to better understand testing, simple fixes, and of course, developer teams. I'm also learning BSL</p>p>
+                            and am currently attending a Software Development course at Brighton MET, partly for interest and to better understand testing, simple fixes, and of course, developer teams. 
+                            I'm also learning British Sign Language</p>
                         <p>I would love to find a team in Brighton where I can use my skills and add value.</p>
                         <div class="social-links">
                             <a href="https://www.linkedin.com/in/nancyrcarter" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
