--- a/index.html
+++ b/index.html
@@ -49,30 +49,29 @@
         </section>
         <section id="courses" class="section-padded">
             <div class="container">
-                <h2>My Background and experience</h2>
+                <h2>Courses & Qualifications</h2>
                 <div class="courses-grid">
                     <div class="course-item">
                         <h3>Project Management - Digital Transformation</h3>
-                        <p class="institution">Level 3 bootcamp, accredited by the Project Management Institute</p>
-                        <p class="date">March 2025 </p>
+                        <p class="institution">Level 3 Bootcamp, accredited by the Project Management Institute</p>
+                        <p class="date">Jan to March 2025</p>
                         <p>This bootcamp provided comprehensive training in digital project management, covering methodologies and tools essential for successful project delivery in the digital age.</p>
                     </div>
                      <div class="course-item">
                         <h3>British Sign Language</h3>
                         <p class="institution">Chichester College Group’s Broadwater campus</p>
-                        <p class="date">Completed Beginner course Spring 2025, currently studying Continuation level.</p>
-                        <p>Developing communication skills in British Sign Language.</p>
+                        <p>Beginners BSL completed in Spring term 2025 and currently studying 'continuation' level. I'm on-track to take my level one BSL exam shortly</p>
+                       
                     </div>
                     <div class="course-item">
                         <h3>Digital Design for Web</h3>
                         <p class="institution">Professional Development Course - Brighton Met</p>
-                        <p class="date">2017/2018</p>
-                        <p>Acquired skills in digital design principles specifically for web applications, focusing on user experience and visual aesthetics.</p>
+                        <p>This course focused on building skills in digital design principles and getting familiar with various applications, including the Adobe suite.</p>
                     </div>
                     <div class="course-item">
                         <h3>Financial Planning Certificate</h3>
                         <p class="institution">Financial Services Authority</p>
-                        I was fully qualified to give whole of market Financial Advice including on Pension, Investments, Mortgages and Insurances.</p>
+                        <p> I held the full FPC certificate and was qualified to give whole-of-market Financial Advice on Pensions, Investments, Mortgages and Insurances.</p>
                     </div>
                     <div class="course-item">
                         <h3>B-Tec National Diploma in Fine Art and Design</h3>
@@ -83,7 +82,7 @@
         </section>
         <section id="projects" class="section-padded bg-light">
             <div class="container">
-                <h2>Obsessions and Projects</h2>
+                <h2>Projects</h2>
 
                 <div class="project-item">
                     <h3>Worthing Street Game - a plan!</h3>
