--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1><a href="#about">Nancy Carter</a></h1>
                 <ul>
                     <li><a href="#about">About Me</a></li>
-                    <li><a href="#courses">Background</a></li>
+                    <li><a href="#courses">Courses</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#cv">CV</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -49,7 +49,7 @@
         </section>
         <section id="courses" class="section-padded">
             <div class="container">
-                <h2>Courses & Qualifications</h2>
+                <h2>Courses</h2>
                 <div class="courses-grid">
                     <div class="course-item">
                         <h3>Project Management - Digital Transformation</h3>
