add software bootcamp

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 <h2>Courses</h2>
                 <div class="courses-grid">
                     <div class="course-item">
+                        <h3>Software Development Bootcamp</h3>
+                        <p class="institution">Brighton Metropolitan College/p>
+                        <p class="date">Summer 2025</p>
+                        <p> I am thoroughly enjoying this intensive web development bootcamp, where we are working on mastering HTML, CSS, JavaScript, Python, and MySQL through a full-stack, industry-linked project. 
+                            I'll be gaining hands-on experience in full-stack web development, AI, jQuery, and database management, culminating in a professional project showcase.
+</p>
+                    </div>
+                    <div class="course-item">
                         <h3>Project Management - Digital Transformation</h3>
                         <p class="institution">Level 3 Bootcamp, accredited by the Project Management Institute</p>
                         <p class="date">Jan to March 2025</p>
