show the softboot

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section id="courses" class="section-padded">
             <div class="container">
                 <h2>Courses</h2>
-                <div class="courses-grid">
+                <div class="courses-grid"></div>
                     <div class="course-item">
                         <h3>Software Development Bootcamp</h3>
                         <p class="institution">Brighton Metropolitan College/p>
