--- a/index.html
+++ b/index.html
@@ -138,25 +138,25 @@
             <div class="container text-center">
                 <h2>Download My CV</h2>
                 <p>For a more detailed overview of my skills, experience, and background, please download my curriculum vitae. </p>
-                <a href="NancyCarter_CV.pdf" download class="btn btn-primary">
+                <a href="assets/NancyCarter CV__25 (2).pdf" download class="btn btn-primary">
                     <i class="fas fa-download"></i> Download CV
                 </a>
-                <p class="cv-note">Please note: This is a generic CV. For specific roles, I tailor my CV to highlight relevant experience.</p>
+                <p class="cv-note">Please note: This is a generic CV - I'll tailor my CV to a specific role to highlight relevant experience.</p>
             </div>
         </section>
 
         <section id="contact" class="section-padded bg-dark">
             <div class="container text-center">
                 <h2>Get in Touch</h2>
-                <p>I love to chat through ideas and potential opportunities- so if you think we might get on, please contact me!</p>
+                <p>I love to chat through ideas and potential opportunities - please contact me!</p>
                 <div class="contact-info">
                     <p><i class="fas fa-envelope"></i> Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
                     <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank">linkedin.com/in/yourlinkedinprofile</a></p>
-                    <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/yourgithubprofile" target="_blank">github.com/yourgithubprofile</a></p>
+                    
                 </div>
                 <div class="footer-social-links">
                     <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/yourgithubprofile" target="_blank" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                    
                 </div>
             </div>
         </section>
