--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <h2>Get in Touch</h2>
                 <p>I love to chat through ideas and potential opportunities - please contact me!</p>
                 <div class="contact-info">
-                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+                    <p><i class="fas fa-envelope"></i> Email: <a href="mailto:carter.msnr@gmail.com">carter.msnr@gmail.com</a></p>
                     <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank">linkedin.com/in/yourlinkedinprofile</a></p>
                     
                 </div>
