--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                 <p>I love to chat through ideas and potential opportunities - please contact me!</p>
                 <div class="contact-info">
                     <p><i class="fas fa-envelope"></i> Email: <a href="mailto:carter.msnr@gmail.com">carter.msnr@gmail.com</a></p>
-                    <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank">linkedin.com/in/yourlinkedinprofile</a></p>
+                    <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/nancyrcarter/" target="_blank">https://www.linkedin.com/in/nancyrcarter/</a></p>
                     
                 </div>
                 <div class="footer-social-links">
-                    <a href="https://linkedin.com/in/yourlinkedinprofile" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/nancyrcarter/" target="_blank" aria-label="LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
                     
                 </div>
             </div>
