--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="assets/images/Nc500wide.jpg" max-width="300" alt="Photograph of Nancy, with a half smile" class="profile-photo">
                     <div class="text-content">
                         <h2>Hello, I'm Nancy</h2>
-                        <p class="tagline">Account, Service and Digital Project Manager</p>
+                        <p class="tagline">Account, Service, and Digital Project Manager</p>
                         <p>I'm a friendly and pragmatic all-rounder, looking for a great team of creative people doing interesting work, for good.</p>
                         <p>With decades of Account and Service management experience, including running the Support service in a 'tech for good', digital agency for four years, and a year in a SaaS
                         start-up, focused on improving fairness in hiring, I am commercially and technically astute, a creative problem solver and enjoy a role where I can get involved on various levels, and learn new skills.</p>
