--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#courses">Courses</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#cv">CV</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact.">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -81,14 +81,14 @@
             </div>
         </section>
         <section id="projects" class="section-padded bg-light">
-            <div class="container">
                 <h2>Projects</h2>
 
                 <div class="project-item">
                     <h3>Worthing Street Game - a plan!</h3>
-                    <div class="project-images">
+                    <div class="container"><div class="project-images">
                             
                             <img src="assets/images/pier amusements.jpg" alt="Worthing Pier, view from entrance ">
+                            </div>
                              
                         </div>
                     <div class="project-details">
