--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             <div class="container text-center">
                 <h2>Download My CV</h2>
                 <p>For a more detailed overview of my skills, experience, and background, please download my curriculum vitae. </p>
-                <a href="assets/NancyCarter CV__25 (2).pdf" download class="btn btn-primary">
+                <a href="assets/NC-CV-July25.pdf" download class="btn btn-primary">
                     <i class="fas fa-download"></i> Download CV
                 </a>
-                <p class="cv-note">Please note: This is a generic CV - I'll tailor my CV to a specific role to highlight relevant experience.</p>
+                <p class="cv-note">Please note: This is a generic CV - I generally tailor my CV to a specific role, highlighting where I have relevant experience. If you have a role in mind, let me know and I'll do that.</p>
             </div>
         </section>
 
