updates cv and new bootcamp page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#courses">Courses</a></li>
                     <li><a href="#cv">CV</a></li>
                     <li><a href="#contact.">Contact</a></li>
+                    <li><a href="softwareDevProjects.html">SoftwareDev Projects</a></li>
                     <li><a href="streetgame.html">Projects</a></li>
                 </ul>
             </div>
@@ -85,7 +86,7 @@
             <div class="container text-center">
                 <h2>Download My CV</h2>
                 <p>For a more detailed overview of my skills, experience, and background, please download my curriculum vitae. </p>
-                <a href="assets/NC-CV-July25.pdf" download class="btn btn-primary">
+                <a href="assets/nc_cv_july_25.pdf" download class="btn btn-primary">
                     <i class="fas fa-download"></i> Download CV
                 </a>
                 <p class="cv-note">Please note: This is a generic CV - I generally tailor my CV to a specific role, highlighting where I have relevant experience. If you have a role in mind, let me know and I'll do that.</p>
