--- a/softwareDevProjects.html
+++ b/softwareDevProjects.html
@@ -267,21 +267,21 @@
             <!-- Project Card 1 -->
             <div class="project-card">
                 <div class="image-container">
-                    <img src="https://placehold.co/600x400/e2e8f0/2c3e50?text=Project+1" alt="Project 1 Screenshot">
+                    <img src="assets/images/EP screenshot.png" alt="screenhot of index page of Electric Pulse website">
                     <div class="overlay">
-                        <p>A brief description of the project appears on hover, giving a little more detail.</p>
+                        <p>Asked to create a band website for an imaged group, called Electric Pulse. We 'vibe coded' (started with AI and fine tuned ourselves).  This site isn't fully working yet...working on it!.</p>
                     </div>
                 </div>
                 <div class="project-card-content">
-                    <h3 class="project-card-title">E-commerce Platform</h3>
-                    <p class="project-card-description">A full-stack web application for online shopping with user authentication and payment integration.</p>
+                    <h3 class="project-card-title">Band website</h3>
+                    <p class="project-card-description">A simple website for a band in my home town of Worthing.</p>
                     <div class="project-card-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Node.js</span>
-                        <span class="tag">MongoDB</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">Google Gemini</span>
+                        <span class="tag">Tailwind</span>
                     </div>
                     <div class="project-card-links">
-                        <a href="#" class="view-project-link">View Project &rarr;</a>
+                        <a href="https://cnarter.github.io/electricpulse/" class="view-project-link">View Project &rarr;</a>
                         <a href="#" class="source-code-link">Source Code</a>
                     </div>
                 </div>
@@ -290,22 +290,25 @@
             <!-- Project Card 2 -->
             <div class="project-card">
                 <div class="image-container">
-                    <img src="https://placehold.co/600x400/e2e8f0/2c3e50?text=Project+2" alt="Project 2 Screenshot">
+                    <img src="assets/images/memorydelosmuertosScreenshot.png" alt="Project2 - Memory Game">
                     <div class="overlay">
                         <p>This project focused on data visualization and creating interactive charts.</p>
                     </div>
                 </div>
                 <div class="project-card-content">
-                    <h3 class="project-card-title">Data Visualization Dashboard</h3>
-                    <p class="project-card-description">An interactive dashboard for visualizing complex datasets using charts and graphs.</p>
+                    <h3 class="project-card-title">Del Dia des Muertos Memory Game</h3>
+                    <p class="project-card-description">Welcome to Memory de los Muertos!
+A fun and challenging web-based memory game with a festive "Day of the Dead" theme. The objective is to test and improve your short-term memory by correctly repeating a sequence of flashing cards. With each successful level, you are presented with a new, more complex pattern to memorize.
+
+The game is built with vanilla HTML, CSS, and JavaScript, making it lightweight and easy to run in any modern web browser.</p>
                     <div class="project-card-tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">Flask</span>
-                        <span class="tag">D3.js</span>
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">HTML</span>
+                        <span class="tag">CSS</span>
                     </div>
                     <div class="project-card-links">
-                        <a href="#" class="view-project-link">View Project &rarr;</a>
-                        <a href="#" class="source-code-link">Source Code</a>
+                        <a href="https://cnarter.github.io/memorygame/" class="view-project-link">View Project &rarr;</a>
+                        <a href="https://github.com/CNarter/memorygame" class="source-code-link">Source Code</a>
                     </div>
                 </div>
             </div>
