--- a/streetgame.html
+++ b/streetgame.html
@@ -69,9 +69,9 @@
     </div>
 </section>
     <section class="prototype-section" style="text-align:center; padding: 40px 0;">
-    <h2>Launch prototype</h2>
+    <h2>Launch dummy game website</h2>
     <p>
-        Check out my game prototype, built in Loveable.dev:<br>
+        Check out my game's website 'prototype', to showcase to prospective local businesses. Built in Loveable.dev:</p>
         <a href="https://worthing-playground-adventure.lovable.app" class="btn btn-primary" target="_blank" rel="noopener">Worthing Streetgame</a>
     </p>
 </section>
