adding payments scheduler links

--- a/softwareDevProjects.html
+++ b/softwareDevProjects.html
@@ -330,8 +330,8 @@ The game is built with vanilla HTML, CSS, and JavaScript, making it lightweight 
                         <span class="tag">Dart</span>
                     </div>
                     <div class="project-card-links">
-                        <a href="#" class="view-project-link">View Project &rarr;</a>
-                        <a href="#" class="source-code-link">Source Code</a>
+                        <a href="https://cnarter.github.io/paymentscheduler/" class="view-project-link">View Project &rarr;</a>
+                        <a href="https://github.com/CNarter/paymentscheduler" class="source-code-link">Source Code</a>
                     </div>
                 </div>
             </div>
