Added payment calc project - removed heart from footer

--- a/softwareDevProjects.html
+++ b/softwareDevProjects.html
@@ -316,18 +316,20 @@ The game is built with vanilla HTML, CSS, and JavaScript, making it lightweight 
             <!-- Project Card 3 -->
             <div class="project-card">
                 <div class="image-container">
-                    <img src="https://placehold.co/600x400/e2e8f0/2c3e50?text=Project+3" alt="Project 3 Screenshot">
+                    <img src="assets/images/Split your payment screenshot.png" alt="Screenshot of the payments scheduler I created">
                      <div class="overlay">
-                        <p>A mobile-first application designed for task management and team collaboration.</p>
+                        <p>An interactive financial tool to calculate payment installments based on custom rules, featuring a modern, mobile-first design and dynamic validation.</p>
                     </div>
                 </div>
                 <div class="project-card-content">
-                    <h3 class="project-card-title">Mobile Task Manager</h3>
-                    <p class="project-card-description">A cross-platform mobile app to help users organize tasks and collaborate with teams.</p>
+                    <h3 class="project-card-title">Interactive Payment Scheduler</h3>
+                    <p class="project-card-description">This project is a responsive, mobile-first web application designed to help users organize a payment into a manageable installment plan. It provides a clean, intuitive interface for users to enter a total amount and instantly see a valid, calculated schedule based on a specific set of financial rules.
+
+The core challenge was implementing the complex calculation and validation logic in JavaScript.</p>
                     <div class="project-card-tags">
-                        <span class="tag">Flutter</span>
-                        <span class="tag">Firebase</span>
-                        <span class="tag">Dart</span>
+                        <span class="tag">HTML5</span>
+                        <span class="tag">Tailwind CSS</span>
+                        <span class="tag">JavaScript</span>
                     </div>
                     <div class="project-card-links">
                         <a href="https://cnarter.github.io/paymentscheduler/" class="view-project-link">View Project &rarr;</a>
@@ -343,7 +345,7 @@ The game is built with vanilla HTML, CSS, and JavaScript, making it lightweight 
     <footer class="site-footer">
         <div class="container">
             <p>&copy; 2025 Nancy Carter. All Rights Reserved.</p>
-            <p class="footer-note">Built with <span class="heart">&hearts;</span> and CSS</p>
+            
         </div>
     </footer>
 
