Update CV in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             I'm also learning British Sign Language</p>
                         <p>I would love to find a team in Brighton where I can use my skills and add value.</p>
                         <p>For a more detailed overview of my skills, experience, and background, please download my curriculum vitae. </p>                                  
-                        <a href="assets/nc_cv_july_25.pdf" download class="btn btn-accent" aria-label="Download CV">
+                        <a href="assets/assets/NC_CV_Jul_25.pdf" download class="btn btn-accent" aria-label="Download CV">
                         <i class="fas fa-download"></i> Download my CV</a>
                         <p class="cv-note">Please note: I tailor my CV to a specific role, highlighting relevant experience. If you have a role in mind, let me know and I'll do that.</p>
                         </div>
